social media feed spacing fix

--- a/wp-content/themes/ideum/stylesheets/components/_social-media-feed.scss
+++ b/wp-content/themes/ideum/stylesheets/components/_social-media-feed.scss
@@ -1,7 +1,5 @@
 .social-media-feed {
-  @include media($medium-screen-up) {
-    padding-bottom: $gutter * 2;
-  }
+  padding-bottom: 0;  
 
   .social-media-feed-slider {
     box-sizing: content-box;
